src/test/ui/issues/issue-16939.stderr
error[E0057]: this function takes 0 parameters but 1 parameter was supplied
  --> $DIR/issue-16939.rs:5:9
   |
LL |     |t| f(t);
   |         ^^^^ expected 0 parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0057`.
